// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Command with flags: anything --as-json --verbose 1`] = `
Array [
  "{\\"request\\":{\\"body\\":{\\"name\\":\\"David\\"},\\"endpoint\\":\\"https://example.org/anything\\"},\\"response\\":{\\"status\\":200,\\"headers\\":[],\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"},\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"}
",
]
`;

exports[`Request Command with flags: anything --as-json 1`] = `
Array [
  "{\\"status\\":200,\\"headers\\":[],\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"}
",
]
`;

exports[`Request Command with flags: anything --no-format 1`] = `
Array [
  "200
",
  "https://example.org/anything
",
  "[]
",
  "\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"
",
]
`;

exports[`Request Command with flags: anything --quiet 1`] = `Array []`;

exports[`Request Command with flags: anything --verbose 1`] = `
Array [
  "",
  "  Status              Endpoint            
",
  "  200                 https://example.org/anything
",
  "
",
  "{
  request: {
    body: {
      name: \\"David\\"
    },
    endpoint: \\"https://example.org/anything\\"
  },
  response: {
    status: 200,
    headers: [],
    body: \\"{\\"hello\\": \\"world\\"}\\"
  },
  body: \\"{\\"hello\\": \\"world\\"}\\"
}
",
]
`;

exports[`Request Command with flags: anything 1`] = `
Array [
  "",
  "  Status              Endpoint            
",
  "  200                 https://example.org/anything
",
  "
",
  "\\"{\\"hello\\": \\"world\\"}\\"
",
]
`;
